# ds_broadcaster

./: .gitignore  .mise.toml  CLAUDE.md  pyproject.toml
ds_broadcaster/: CHANGELOG.md  README.md  __init__.py  apps.py  broadcaster.py  formatting.py  registry.py  urls.py  views.py
ds_broadcaster/templates/ds_broadcaster/: _presence.html  test.html
ds_broadcaster/templatetags/: ds_broadcaster_tags.py
sandbox/core/: forms.py  urls.py  views.py
sandbox/core/templates/core/: home.html  login.html  profile.html  signup.html  toast_test.html
sandbox/rooms/: admin.py  forms.py  models.py  urls.py  views.py
sandbox/rooms/migrations/: 0001_initial.py
sandbox/rooms/templates/rooms/: _canvas.html  _chat.html  _members.html  _message.html  room_create.html  room_delete.html  room_detail.html  room_edit.html  room_list.html
sandbox/rooms/templatetags/: rooms_tags.py
sandbox/sandbox/: settings.py  urls.py
sandbox/static/js/: canvas_app.js  datastar-pro.js
sandbox/templates/: base.html
