[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-broadcaster"
version = "0.1.0"
description = "A Django app for real-time SSE broadcasting using the Datastar format. Requires Datastar on the frontend and an ASGI server (e.g. uvicorn)."
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
]

[project.urls]
Repository = "https://github.com/youruser/ds-broadcaster"
