[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-broadcaster"
version = "0.2.1"
description = "A Django app for real-time SSE broadcasting using the Datastar format. Requires Datastar on the frontend and an ASGI server (e.g. uvicorn)."
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]",
    "whitenoise",
]

[tool.setuptools.packages.find]
include = ["ds_broadcaster*"]

[project.urls]
Repository = "https://github.com/bobleung/ds_broadcaster"
